--- a/src/views/components/bi/chart/setting/iconfont/demo_index.html
+++ b/src/views/components/bi/chart/setting/iconfont/demo_index.html
@@ -55,6 +55,24 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
+              <span class="icon iconfontbi">&#xe659;</span>
+                <div class="name">t</div>
+                <div class="code-name">&amp;#xe659;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfontbi">&#xe66a;</span>
+                <div class="name">clock</div>
+                <div class="code-name">&amp;#xe66a;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfontbi">&#xe7a4;</span>
+                <div class="name">井号</div>
+                <div class="code-name">&amp;#xe7a4;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfontbi">&#xeb95;</span>
                 <div class="name">图表-饼图</div>
                 <div class="code-name">&amp;#xeb95;</div>
@@ -90,9 +108,9 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfontbi';
-  src: url('iconfont.woff2?t=1741139865832') format('woff2'),
-       url('iconfont.woff?t=1741139865832') format('woff'),
-       url('iconfont.ttf?t=1741139865832') format('truetype');
+  src: url('iconfont.woff2?t=1741315140936') format('woff2'),
+       url('iconfont.woff?t=1741315140936') format('woff'),
+       url('iconfont.ttf?t=1741315140936') format('truetype');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
@@ -117,6 +135,33 @@
       </div>
       <div class="content font-class">
         <ul class="icon_lists dib-box">
+          
+          <li class="dib">
+            <span class="icon iconfontbi icon-bi-t"></span>
+            <div class="name">
+              t
+            </div>
+            <div class="code-name">.icon-bi-t
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfontbi icon-bi-clock"></span>
+            <div class="name">
+              clock
+            </div>
+            <div class="code-name">.icon-bi-clock
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfontbi icon-bi-jinghao"></span>
+            <div class="name">
+              井号
+            </div>
+            <div class="code-name">.icon-bi-jinghao
+            </div>
+          </li>
           
           <li class="dib">
             <span class="icon iconfontbi icon-bi-tubiao-bingtu"></span>
@@ -171,6 +216,30 @@
       </div>
       <div class="content symbol">
           <ul class="icon_lists dib-box">
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-bi-t"></use>
+                </svg>
+                <div class="name">t</div>
+                <div class="code-name">#icon-bi-t</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-bi-clock"></use>
+                </svg>
+                <div class="name">clock</div>
+                <div class="code-name">#icon-bi-clock</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-bi-jinghao"></use>
+                </svg>
+                <div class="name">井号</div>
+                <div class="code-name">#icon-bi-jinghao</div>
+            </li>
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
