--- a/src/views/components/bi/chart/setting/iconfont/demo_index.html
+++ b/src/views/components/bi/chart/setting/iconfont/demo_index.html
@@ -55,6 +55,12 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
+              <span class="icon iconfontbi">&#xe69b;</span>
+                <div class="name">星号</div>
+                <div class="code-name">&amp;#xe69b;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfontbi">&#xe659;</span>
                 <div class="name">t</div>
                 <div class="code-name">&amp;#xe659;</div>
@@ -108,9 +114,9 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfontbi';
-  src: url('iconfont.woff2?t=1741315140936') format('woff2'),
-       url('iconfont.woff?t=1741315140936') format('woff'),
-       url('iconfont.ttf?t=1741315140936') format('truetype');
+  src: url('iconfont.woff2?t=1741318263975') format('woff2'),
+       url('iconfont.woff?t=1741318263975') format('woff'),
+       url('iconfont.ttf?t=1741318263975') format('truetype');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
@@ -135,6 +141,15 @@
       </div>
       <div class="content font-class">
         <ul class="icon_lists dib-box">
+          
+          <li class="dib">
+            <span class="icon iconfontbi icon-bi-jiufuqianbaoicon14"></span>
+            <div class="name">
+              星号
+            </div>
+            <div class="code-name">.icon-bi-jiufuqianbaoicon14
+            </div>
+          </li>
           
           <li class="dib">
             <span class="icon iconfontbi icon-bi-t"></span>
@@ -216,6 +231,14 @@
       </div>
       <div class="content symbol">
           <ul class="icon_lists dib-box">
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-bi-jiufuqianbaoicon14"></use>
+                </svg>
+                <div class="name">星号</div>
+                <div class="code-name">#icon-bi-jiufuqianbaoicon14</div>
+            </li>
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
